--- a/index.html
+++ b/index.html
@@ -1,172 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        padding: 5px;
+      }
+    </style>
+  </head>
 
-  <style>
-    table,
-    th,
-    td {
-      border: 1px solid black;
-      padding: 5px;
-    }
-  </style>
-</head>
+  <body>
+    <input type="text" placeholder="Name of stuff" id="name" />
+    <input type="number" placeholder="Price of stuff" id="price" />
+    <select id="category">
+      <option value="Furniture">Furniture</option>
+      <option value="Electronic">Electronic</option>
+    </select>
+    <button type="button" onclick="SaveStuff()" id="save">Save</button>
+    <table style="margin-top: 20px">
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Name</th>
+          <th>Category</th>
+          <th>Price</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="result">
+        <tr>
+          <td>1</td>
+          <td>Wardrobe</td>
+          <td>Furniture</td>
+          <td>$100</td>
+          <td>
+            <button type="button">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div>
+      <h3>Total : <span id="total">$0.00</span></h3>
+    </div>
 
-<body>
-  <input type="text" placeholder="Name of stuff" id="name" />
-  <input type="number" placeholder="Price of stuff" id="price" />
-  <select id="category">
-    <option value="Furniture">Furniture</option>
-    <option value="Electronic">Electronic</option>
-  </select>
-  <button type="button" onclick="SaveStuff()" id="save">Save</button>
-  <table style="margin-top: 20px">
-    <thead>
-      <tr>
-        <th>No.</th>
-        <th>Name</th>
-        <th>Category</th>
-        <th>Price</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody id="result">
-      <tr>
-        <td>1</td>
-        <td>Wardrobe</td>
-        <td>Furniture</td>
-        <td>$100</td>
-        <td>
-          <button type="button">Delete</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script>
-    const GetStuff = async () => {
-      await axios.get('http://localhost:3000/stuff')
-        .then((response) => {
-          console.log(response.data);
-          const stuffs = response.data;
-          let bucket = '';
-          stuffs.forEach((stuff, index) => {
-            bucket += `
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+      const GetStuff = async () => {
+        await axios
+          .get("http://localhost:3000/stuff")
+          .then((response) => {
+            console.log(response.data);
+            const stuffs = response.data;
+            let bucket = "";
+            let total = 0;
+            stuffs.forEach((stuff, index) => {
+              bucket += `
                     <tr>
                         <td>${index + 1}</td>
                         <td>${stuff.name}</td>
                         <td>${stuff.category}</td>
                         <td>$${stuff.price}</td>
                         <td>
-                          <button type="button" onclick="EditStuff('${stuff.id}')">Edit</button>
-                            <button type="button" onclick="DeleteStuff('${stuff.id}')">Delete</button>
+                          <button type="button" onclick="EditStuff('${
+                            stuff.id
+                          }')">Edit</button>
+                            <button type="button" onclick="DeleteStuff('${
+                              stuff.id
+                            }')">Delete</button>
                         </td>
                     </tr>
                     `;
+              total += parseFloat(stuff.price);
+            });
+            document.getElementById("result").innerHTML = bucket;
+            document.getElementById("total").innerText = `${total.toFixed(2)}`;
+          })
+          .catch((error) => {
+            alert(error.message);
           });
-          document.getElementById('result').innerHTML = bucket;
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-    GetStuff();
+      };
+      GetStuff();
 
-    const GetCategory = async () => {
-      await axios.get('http://localhost:3000/categories')
-        .then((response) => {
-          console.log(response.data);
-          const categories = response.data;
-          let bucket = '';
-          categories.forEach((category, index) => {
-            bucket += `
+      const GetCategory = async () => {
+        await axios
+          .get("http://localhost:3000/categories")
+          .then((response) => {
+            console.log(response.data);
+            const categories = response.data;
+            let bucket = "";
+            categories.forEach((category, index) => {
+              bucket += `
             <option>${category.name}</option>
                     `;
+            });
+            document.getElementById("category").innerHTML = bucket;
+          })
+          .catch((error) => {
+            alert(error.message);
           });
-          document.getElementById('category').innerHTML = bucket;
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-    GetCategory();
+      };
+      GetCategory();
 
-
-    const SaveStuff = async () => {
-      let name = document.getElementById('name').value;
-      let price = document.getElementById('price').value;
-      let category = document.getElementById('category').value;
-      await axios.post('http://localhost:3000/stuff', {
-        name: name,
-        price: price,
-        category: category,
-      })
-        .then((response) => {
-          console.log(response);
-          GetStuff();
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-    const DeleteStuff = async (id) => {
-      const confirmVal = confirm('Apakah data akan dihapus?');
-      if (confirmVal) {
-        await axios.delete(`http://localhost:3000/stuff/${id}`)
+      const SaveStuff = async () => {
+        let name = document.getElementById("name").value;
+        let price = document.getElementById("price").value;
+        let category = document.getElementById("category").value;
+        await axios
+          .post("http://localhost:3000/stuff", {
+            name: name,
+            price: price,
+            category: category,
+          })
           .then((response) => {
             console.log(response);
             GetStuff();
           })
           .catch((error) => {
             alert(error.message);
+          });
+      };
+      const DeleteStuff = async (id) => {
+        const confirmVal = confirm("Apakah data akan dihapus?");
+        if (confirmVal) {
+          await axios
+            .delete(`http://localhost:3000/stuff/${id}`)
+            .then((response) => {
+              console.log(response);
+              GetStuff();
+            })
+            .catch((error) => {
+              alert(error.message);
+            });
+        }
+      };
+
+      const EditStuff = async (id) => {
+        await axios
+          .get(`http://localhost:3001/stuff/${id}`)
+          .then((response) => {
+            const stuff = response.data;
+            document.getElementById("name").value = stuff.name;
+            document.getElementById("price").value = stuff.price;
+            document.getElementById("category").value = stuff.category;
+            document.getElementById("save").innerText = "Update";
+            document
+              .getElementById("save")
+              .setAttribute("onclick", `UpdateStuff('${id}')`);
+            console.log(response);
           })
-      }
-    }
-
-    const EditStuff = async (id) => {
-
-      await axios.get(`http://localhost:3001/stuff/${id}`)
-        .then((response) => {
-          const stuff = response.data;
-          document.getElementById("name").value = stuff.name;
-          document.getElementById("price").value = stuff.price;
-          document.getElementById("category").value = stuff.category;
-          document.getElementById("save").innerText = "Update";
-          document.getElementById("save").setAttribute('onclick', `UpdateStuff('${id}')`);
-          console.log(response);
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-
-    }
-    const UpdateStuff = async (id) => {
-      let name = document.getElementById('name').value;
-      let price = document.getElementById('price').value;
-      let category = document.getElementById('category').value;
-      await axios.patch(`http://localhost:3001/stuff/${id}`, {
-        name: name,
-        price: price,
-        category: category,
-      })
-        .then((response) => {
-          console.log(response);
-          document.getElementById("name").value = "";
-          document.getElementById("price").value = "";
-          document.getElementById("save").innerText = "Save";
-          document.getElementById("save").setAttribute('onclick', `SaveStuff()`);
-          GetStuff();
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-  </script>
-</body>
-
+          .catch((error) => {
+            alert(error.message);
+          });
+      };
+      const UpdateStuff = async (id) => {
+        let name = document.getElementById("name").value;
+        let price = document.getElementById("price").value;
+        let category = document.getElementById("category").value;
+        await axios
+          .patch(`http://localhost:3001/stuff/${id}`, {
+            name: name,
+            price: price,
+            category: category,
+          })
+          .then((response) => {
+            console.log(response);
+            document.getElementById("name").value = "";
+            document.getElementById("price").value = "";
+            document.getElementById("save").innerText = "Save";
+            document
+              .getElementById("save")
+              .setAttribute("onclick", `SaveStuff()`);
+            GetStuff();
+          })
+          .catch((error) => {
+            alert(error.message);
+          });
+      };
+    </script>
+  </body>
 </html>
