--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+
+    <link rel="stylesheet" href="./style.css" />
+
     <style>
       table,
       th,
@@ -16,37 +29,54 @@
   </head>
 
   <body>
-    <input type="text" placeholder="Name of stuff" id="name" />
-    <input type="number" placeholder="Price of stuff" id="price" />
-    <select id="category">
-      <option value="Furniture">Furniture</option>
-      <option value="Electronic">Electronic</option>
-    </select>
-    <button type="button" onclick="SaveStuff()" id="save">Save</button>
-    <table style="margin-top: 20px">
-      <thead>
-        <tr>
-          <th>No.</th>
-          <th>Name</th>
-          <th>Category</th>
-          <th>Price</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="result">
-        <tr>
-          <td>1</td>
-          <td>Wardrobe</td>
-          <td>Furniture</td>
-          <td>$100</td>
-          <td>
-            <button type="button">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <div>
-      <h3>Total : <span id="total">$0.00</span></h3>
+    <aside></aside>
+
+    <div class="container mx-auto mt-5">
+      <h1 class="text-4xl mb-5 font-axiforma">Fahri Muhammad</h1>
+      <div class="flex flex-row gap-4">
+        <input
+          type="text"
+          class="bg-slate-300"
+          placeholder="Name of stuff"
+          id="name"
+        />
+        <input
+          type="number"
+          class="bg-slate-300"
+          placeholder="Price of stuff"
+          id="price"
+        />
+        <select class="bg-slate-300" id="category">
+          <option value="Furniture">Furniture</option>
+          <option value="Electronic">Electronic</option>
+        </select>
+        <button type="button" onclick="SaveStuff()" id="save">Save</button>
+      </div>
+      <table style="margin-top: 20px">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Price</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="result">
+          <tr>
+            <td>1</td>
+            <td>Wardrobe</td>
+            <td>Furniture</td>
+            <td>$100</td>
+            <td>
+              <button type="button">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div>
+        <h3>Total : <span id="total">$0.00</span></h3>
+      </div>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -105,7 +135,7 @@
             alert(error.message);
           });
       };
-      GetCategory();  
+      GetCategory();
 
       const SaveStuff = async () => {
         let name = document.getElementById("name").value;
@@ -175,7 +205,7 @@
             document.getElementById("name").value = "";
             document.getElementById("price").value = "";
             document.getElementById("save").innerText = "Save";
-            document  
+            document
               .getElementById("save")
               .setAttribute("onclick", `SaveStuff()`);
             GetStuff();
