--- a/category.html
+++ b/category.html
@@ -1,119 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <input type="text" placeholder="Name of category" id="name" />
-    <button type="button" onclick="SaveCategory()" id="save">Save</button>
-    <table style="margin-top: 20px">
-      <thead>
-        <tr>
-          <th>No.</th>
-          <th>Name</th>
-        </tr>
-      </thead>
-      <tbody id="result">
-        <tr>
-          <td>1</td>
-          <td>Wardrobe</td>
-          <td>
-            <button type="button">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Category of Stuffs</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
+  <body
+    class="bg-gray-100 font-poppins min-h-screen flex flex-col justify-center items-center py-8"
+  >
+    <div class="max-w-lg w-full p-6 bg-white rounded-lg shadow-md">
+      <div class="flex flex-row gap-3 items-center">
+        <input
+          type="text"
+          placeholder="Name of category"
+          id="name"
+          class="w-full border rounded-lg px-4 py-2"
+        />
+        <button
+        onclick="SaveCategory()"
+          type="button"
+          id="save"
+          class="bg-frog hover:bg-forest transition duration-300 text-white font-bold px-4 py-2 rounded-md"
+        >
+          Save
+        </button>
+      </div>
+      <table class="w-full mt-8">
+        <thead>
+          <tr>
+            <th class="px-4 py-2">No.</th>
+            <th class="px-4 py-2">Name</th>
+            <th class="px-4 py-2">Actions</th>
+          </tr>
+        </thead>
+        <tbody id="result">
+          <tr>
+            <td class="border px-4 py-2">1</td>
+            <td class="border px-4 py-2">Wardrobe</td>
+            <td class="border px-4 py-2">
+              <button
+                type="button"
+                class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-1 px-2 rounded"
+              >
+                Edit
+              </button>
+              <button
+                type="button"
+                class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded ml-2"
+              >
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script>
-    const GetCategory = async () => {
-      await axios.get('http://localhost:3000/categories')
-        .then((response) => {
-          console.log(response.data);
-          const categories = response.data;
-          let bucket = '';
-          categories.forEach((category, index) => {
-            bucket += `
-                    <tr>
-                        <td>${index + 1}</td>
-                        <td>${category.name}</td>
-                        <td>
-                          <button type="button" onclick="EditCategory('${category.id}')">Edit</button>
-                            <button type="button" onclick="DeleteCategory('${category.id}')">Delete</button>
-                        </td>
-                    </tr>
-                    `;
+    <script>
+      const GetCategory = async () => {
+        await axios
+          .get("http://localhost:3000/categories")
+          .then((response) => {
+            console.log(response.data);
+            const categories = response.data;
+            let bucket = "";
+            categories.forEach((category, index) => {
+              bucket += `
+                            <tr>
+                                <td class="border px-4 py-2 text-center">${
+                                  index + 1
+                                }</td>
+                                <td class="border px-4 py-2 ">${
+                                  category.name
+                                }</td>
+                                <td class="border px-4 py-2 text-center">
+                                    <button type="button" onclick="EditCategory('${
+                                      category.id
+                                    }')"
+                                        class="bg-yellow-400 hover:bg-yellow-500 transition duration-300 text-white font-bold py-1 px-2 rounded">
+                                        Edit
+                                    </button>
+                                    <button type="button" onclick="DeleteCategory('${
+                                      category.id
+                                    }')"
+                                        class="bg-danger hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-2 rounded ml-2">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                            `;
+            });
+            document.getElementById("result").innerHTML = bucket;
+          })
+          .catch((error) => {
+            alert(error.message);
           });
-          document.getElementById('result').innerHTML = bucket;
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
+      };
 
-    GetCategory();
+      GetCategory();
 
-    const SaveCategory = async () => {
-      let name = document.getElementById('name').value;
-      await axios.post('http://localhost:3000/categories', {
-        name: name
-      })
-        .then((response) => {
-          console.log(response);
-          GetCategory();
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-    const DeleteCategory = async (id) => {
-      const confirmVal = confirm('Apakah data akan dihapus?');
-      if (confirmVal) {
-        await axios.delete(`http://localhost:3000/categories/${id}`)
+      const SaveCategory = async () => {
+        let name = document.getElementById("name").value;
+        await axios
+          .post("http://localhost:3000/categories", {
+            name: name,
+          })
           .then((response) => {
             console.log(response);
             GetCategory();
           })
           .catch((error) => {
             alert(error.message);
+          });
+      };
+      const DeleteCategory = async (id) => {
+        const confirmVal = confirm(
+          "Are you sure you want to delete this data?"
+        );
+        if (confirmVal) {
+          await axios
+            .delete(`http://localhost:3000/categories/${id}`)
+            .then((response) => {
+              console.log(response);
+              GetCategory();
+            })
+            .catch((error) => {
+              alert(error.message);
+            });
+        }
+      };
+
+      const EditCategory = async (id) => {
+        await axios
+          .get(`http://localhost:3000/categories/${id}`)
+          .then((response) => {
+            const category = response.data;
+            document.getElementById("name").value = category.name;
+            document.getElementById("save").innerText = "Update";
+            document
+              .getElementById("save")
+              .setAttribute("onclick", `UpdateCategory('${id}')`);
+            console.log(response);
           })
-      }
-    }
-
-    const EditCategory = async (id) => {
-
-      await axios.get(`http://localhost:3000/categories/${id}`)
-        .then((response) => {
-          const category = response.data;
-          document.getElementById("name").value = category.name;
-          document.getElementById("save").innerText = "Update";
-          document.getElementById("save").setAttribute('onclick', `UpdateCategory('${id}')`);
-          console.log(response);
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-
-    }
-    const UpdateCategory = async (id) => {
-      let name = document.getElementById('name').value;
-      await axios.patch(`http://localhost:3000/categories/${id}`, {
-        name: name
-      })
-        .then((response) => {
-          console.log(response);
-          document.getElementById("name").value = "";
-          document.getElementById("save").innerText = "Save";
-          document.getElementById("save").setAttribute('onclick', `SaveCategory()`);
-          GetCategory();
-        })
-        .catch((error) => {
-          alert(error.message);
-        })
-    }
-  </script>
-</body>
+          .catch((error) => {
+            alert(error.message);
+          });
+      };
+      const UpdateCategory = async (id) => {
+        let name = document.getElementById("name").value;
+        await axios
+          .patch(`http://localhost:3000/categories/${id}`, {
+            name: name,
+          })
+          .then((response) => {
+            console.log(response);
+            document.getElementById("name").value = "";
+            document.getElementById("save").innerText = "Save";
+            document
+              .getElementById("save")
+              .setAttribute("onclick", `SaveCategory()`);
+            GetCategory();
+          })
+          .catch((error) => {
+            alert(error.message);
+          });
+      };
+    </script>
+  </body>
 </html>
