--- a/category.html
+++ b/category.html
@@ -22,7 +22,7 @@
         onclick="SaveCategory()"
           type="button"
           id="save"
-          class="bg-frog hover:bg-forest transition duration-300 text-white font-bold px-4 py-2 rounded-md"
+          class="bg-mint hover:bg-frog transition duration-300 text-white font-semibold px-4 py-2 rounded-md"
         >
           Save
         </button>
@@ -42,13 +42,13 @@
             <td class="border px-4 py-2">
               <button
                 type="button"
-                class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-1 px-2 rounded"
+                class="bg-yellow-500 hover:bg-yellow-700 text-white font-semibold py-1 px-2 rounded"
               >
                 Edit
               </button>
               <button
                 type="button"
-                class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded ml-2"
+                class="bg-red-500 hover:bg-red-700 text-white font-semibold py-1 px-2 rounded ml-2"
               >
                 Delete
               </button>
@@ -80,13 +80,13 @@
                                     <button type="button" onclick="EditCategory('${
                                       category.id
                                     }')"
-                                        class="bg-yellow-400 hover:bg-yellow-500 transition duration-300 text-white font-bold py-1 px-2 rounded">
+                                        class="text-white bg-yellow-400 hover:bg-yellow-500 transition duration-300 py-1 px-3 rounded-md font-semibold">
                                         Edit
                                     </button>
                                     <button type="button" onclick="DeleteCategory('${
                                       category.id
                                     }')"
-                                        class="bg-danger hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-2 rounded ml-2">
+                                        class="text-white bg-frog hover:bg-forest transition duration-300 py-1 px-3 rounded-md font-semibold">
                                         Delete
                                     </button>
                                 </td>
