--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
             <div class="flex flex-row gap-4">
               <a href=""
                 ><i
-                  class="fa-regular fa-bell p-2 bg-slate-50 rounded-full text-gray-600"
+                  class="fa-regular fa-bell p-2 bg-slate-50 hover:bg-slate-100 transition duration-300 rounded-full text-gray-600"
                 ></i
               ></a>
               <a href=""
                 ><i
-                  class="fa-solid fa-search p-2 bg-slate-50 rounded-full text-gray-600"
+                  class="fa-solid fa-search p-2 bg-slate-50 hover:bg-slate-100 transition duration-300 rounded-full text-gray-600"
                 ></i
               ></a>
               <a href="">
                 <i
-                  class="fa-solid fa-user p-2 bg-slate-50 rounded-md text-gray-600"
+                  class="fa-solid fa-user p-2 bg-slate-50 hover:bg-slate-100 transition duration-300 rounded-md text-gray-600"
                 ></i>
                 <i
                   class="fa-solid fa-chevron-down py-2 text-gray-600 text-xs"
@@ -177,12 +177,12 @@
           </div>
           <div>
             <div class="flex flex-row gap-3 ">
-              <button type="button" class="flex items-center bg-slate-50 px-3 rounded-md gap-2 dark:text-stone dark:bg-gray-900 dark:hover:bg-black">
+              <button type="button" class="flex items-center bg-slate-50 hover:bg-slate-100 transition duration-300 px-3 rounded-md gap-2 dark:text-stone dark:bg-gray-900 dark:hover:bg-black">
                 <i class="fa-regular fa-calendar-days text-gray-600"></i>
                 <h4>31 Jun 2024</h4>
               </button>
               <span class="flex items-center font-medium text-sm">To</span>
-              <button type="button" class="flex items-center bg-slate-50 px-3 rounded-md gap-2 dark:text-stone dark:bg-gray-900 dark:hover:bg-black">
+              <button type="button" class="flex items-center bg-slate-50 hover:bg-slate-100 transition duration-300 px-3 rounded-md gap-2 dark:text-stone dark:bg-gray-900 dark:hover:bg-black">
                 <i class="fa-regular fa-calendar-days text-gray-600"></i>
                 <h4>16 Jul 2024</h4>
               </button>
